--- a/Evaluacion final 2/css/estilos.css
+++ b/Evaluacion final 2/css/estilos.css
@@ -8,14 +8,21 @@ body {
 	flex-direction: column;
 }
 
-#contenido > h1{
+#encabezado {
   background: #5b7989;
   text-align: left;
   padding: 20px;
   margin-top: -7px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  display: inline;
 }
+
+a {
+  display: inline;
+}
+
+
 
 #imgCentro {
   margin-top: -20px;
