Se termino la parte del encabezado y la imagen principal.

--- a/Evaluacion final 2/css/estilos.css
+++ b/Evaluacion final 2/css/estilos.css
@@ -1,6 +1,11 @@
 body {
+  background-color: #02010a;
   margin-left: 50px;
   margin-right: 50px;
+}
+
+img {
+  box-shadow: 2px 2px #02010a;
 }
 
 #contenido {
