--- a/Evaluacion final 2/css/estilos.css
+++ b/Evaluacion final 2/css/estilos.css
@@ -74,7 +74,7 @@ a {
     display: flex;
     flex-direction: column;
     background: #5b7989;
-    text-align: right;
+    text-align: center;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
   }
@@ -83,6 +83,7 @@ a {
     font-family: 'Dancing Script', cursive;
     font-size: 19px;
     font-weight: bold;
+    justify-content: center;
     text-shadow: 2px 2px #02010a;
     color: white;
     width: 100%;
