--- a/Evaluacion final 2/css/estilos.css
+++ b/Evaluacion final 2/css/estilos.css
@@ -38,7 +38,7 @@ a {
 
 .menu > div {
   font-family: 'Dancing Script', cursive;
-  font-size: 19px;
+  font-size: 25px;
   font-weight: bold;
   text-shadow: 2px 2px #02010a;
   color: white;
@@ -62,71 +62,34 @@ a {
   text-decoration: underline;
 }
 
-@media (max-width: 900px) {
-  #contenido {
-    display: flex;
-  	flex-direction: column;
-    width: 100%;
-    margin: 0 auto;
-  }
-
-  .menu {
-    display: flex;
-    flex-direction: column;
-    background: #5b7989;
-    text-align: center;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-  }
-
-  .menu > div {
-    font-family: 'Dancing Script', cursive;
-    font-size: 19px;
-    font-weight: bold;
-    justify-content: center;
-    text-shadow: 2px 2px #02010a;
-    color: white;
-    width: 100%;
-  }
-}
-
-#imgCentro {
-  background: #82c3a6;
-  padding: 20px;
-  text-align: center;
-}
-
-.imgPrincipal {
-  box-shadow: 2px 2px #02010a;
-  width: 90%;
-}
-
 .imgSecundaria {
   display: flex;
-	flex-direction: row;
+  flex-direction: row;
   background: #d5c75f;
 }
 
 .imgSecundaria > div {
+  font-family: 'Dancing Script', cursive;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: underline;
   text-align: center;
-	padding: 17px;
-	margin: 10px;
-	width: 50%;
+  padding: 17px;
+  margin: 10px;
+  width: 50%;
 }
 
 .imgPaisaje {
   box-shadow: 2px 2px #02010a;
   border: 1px solid;
-  margin: 10px;
-	width: 350px;
+  width: 80%;
   transition: 1s;
 }
 
 .imgRetrato {
   box-shadow: 2px 2px #02010a;
   border: 1px solid;
-  margin: 10px;
-  width: 350px;
+  width: 80%;
   transition: 1s;
 }
 
@@ -148,6 +111,7 @@ a {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   background: #C6d5c5;
+  width: 100%;
 }
 
 .pieDePagina > div {
@@ -158,6 +122,89 @@ a {
   padding: 10px;
   margin: 10px;
   width: 25%;
+}
+
+@media (max-width: 900px) {
+  #contenido {
+    display: flex;
+  	flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    background: #5b7989;
+    text-align: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+
+  .menu > div {
+    font-family: 'Dancing Script', cursive;
+    font-size: 25px;
+    font-weight: bold;
+    justify-content: center;
+    text-shadow: 2px 2px #02010a;
+    color: white;
+    width: 100%;
+  }
+
+  .imgSecundaria {
+    display: flex;
+    flex-direction: column;
+    background: #d5c75f;
+  }
+
+  .imgSecundaria > div {
+    font-family: 'Dancing Script', cursive;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: underline;
+    padding: 25px;
+    padding-left: 8%;
+  	width: 80%;
+  }
+
+  .imgPaisaje {
+    box-shadow: 2px 2px #02010a;
+    border: 1px solid;
+  	width: 75%;
+    transition: 1s;
+  }
+
+  .imgRetrato {
+    box-shadow: 2px 2px #02010a;
+    border: 1px solid;
+    width: 75%;
+    transition: 1s;
+  }
+
+  .pieDePagina {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .pieDePagina > div {
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+    font-size: 17px;
+    font-weight: bold;
+    width: 50%;
+  }
+}
+
+#imgCentro {
+  background: #82c3a6;
+  padding: 20px;
+  text-align: center;
+}
+
+.imgPrincipal {
+  box-shadow: 2px 2px #02010a;
+  width: 90%;
 }
 
 .redes {
