--- a/Evaluacion final 2/css/estilos_paisaje.css
+++ b/Evaluacion final 2/css/estilos_paisaje.css
@@ -86,6 +86,21 @@ a {
   width: 80%;
 }
 
+#imagen1 {
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+}
+
+#imagen2, #imagen4, #imagen6 {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+#imagen3 {
+  -webkit-filter: sepia(100%);
+  filter: sepia(100%);
+}
+
 .pieDePagina {
   display: flex;
   flex-direction: row;
